Modernize o.e.jface.tests.notifications
* Move to Java 17
* Remove extra nested empty suite
* Enable save actions